# trove

./: ARCHITECTURE.md  Cargo.toml  LICENSE.md  README.md  build.rs  install.sh
.github/workflows/: ci.yml  e2e.yml  release.yml
.types/: person.json
.wrangler/cache/: wrangler-account.json
docs/: backup.md  check.md  contributing.md  cow-versions.md  embed.md  embedding-pipeline.md  frontmatter.md  intro.md  jfs.md  lifecycle.md  meta.toml  mount.md  packaging.md  posix.md  quickstart.md  running.md  stripe-projects.md  thesis.md  troubleshooting.md  types.md  usage.md  validate.md  version.md  versioning.md  write-pipeline.md
e2e/: Dockerfile  compose.yaml  docker-entrypoint.sh
examples/: draftprobe.rs
libjfs/: THIRD-PARTY-LICENSES.head.md  build.sh  collect-licenses.sh
libjfs/license-notes/: github.com_dchest_siphash.txt  github.com_hungys_go-lz4.txt  github.com_oliverisaac_shellescape.txt
libjfs/patches/: 0001-add-jfs_format.patch  0002-add-locks.patch
proposals/: per-folder-vaults.md  vault-lifecycle.md
scripts/: e2e.sh
spike/: .gitignore  client-behaviour.sh  format-r2.sh
spike/ffi-proof/: Cargo.toml  build.rs
spike/ffi-proof/src/: main.rs
src/: blobstore.rs  config.rs  demo.rs  embed.rs  frontmatter.rs  jfs.rs  lib.rs  main.rs  mount.rs  platform.rs  recorder.rs  s3.rs  types.rs  validate.rs  version.rs  versioning.rs
src/commands/: backup.rs  check.rs  docs.rs  doctor.rs  history.rs  import.rs  init.rs  install.rs  lifecycle.rs  mod.rs  provision.rs  self_update.rs  server.rs  usage.rs
supabase/: config.toml
supabase/migrations/: 20260527172259_init_version_chain_and_embeddings.sql
tests/: backup.rs  blobstore.rs  check.rs  demo_seed.rs  doctor.rs  embed.rs  history.rs  import.rs  install.rs  jfs.rs  lifecycle.rs  mount.rs  provision.rs  recorder.rs  search.rs  server.rs  usage.rs  version.rs  versioning.rs
