[package]
name = "trove"
version = "0.1.0"
edition = "2021"
description = "A filesystem that talks back — schema-on-write validation for markdown+frontmatter knowledge stores"
license-file = "LICENSE.md"

[[bin]]
name = "trove"
path = "src/main.rs"

[features]
# `mount` pulls the substrate runtime: JuiceFS-backed FUSE (libjfs) + COW
# version capture + the `trove embed` worker (ureq for the OpenAI call). Kept
# behind a feature so `trove check` and the validator build with no native deps.
mount = ["dep:fuser", "dep:libc", "dep:ureq", "dep:similar"]

[dependencies]
fuser = { version = "0.17", optional = true }
libc = { version = "0.2", optional = true }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
jsonschema = "0.18"
globset = "0.4"
walkdir = "2"
anyhow = "1"
colored = "2"
postgres = "0.19"
sha2 = "0.10"
hex = "0.4"
ureq = { version = "2", features = ["json"], optional = true }
similar = { version = "2", optional = true }
